<resources>
    <string name="app_name">To Do List</string>
    <string name="item_one" translatable="false">Item One</string>
    <string name="new_list">New List</string>
    <string name="settings">Settings</string>
    <string name="all_tasks">All Tasks</string>
    <string name="lists">Lists</string>
    <string name="finished">Finished</string>
    <string name="tasks">Tasks:</string>
    <string name="no_tasks">No tasks</string>
    <string name="edit_list">Edit List</string>
    <string name="what_is_to_be_done">What is to be done ?</string>
    <string name="due_date">Due date</string>
    <string name="enter_task_here">Enter Task Here</string>
    <string name="list_name">List Name</string>
    <string name="date_not_set">Date not set</string>
    <string name="add_to_list">Add to list</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="name_default">Default</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="canceled">Canceled</string>
    <string name="yes">Yes</string>
    <string name="updated">Updated</string>
    <string name="finish_task">Finish task?</string>
    <string name="delete_task">Delete task?</string>
    <string name="list_deleted">List Deleted</string>
    <string name="task_deleted">Task Deleted</string>
    <string name="delete">Delete</string>
    <string name="list_deleted_message">All tasks from the list will also be deleted!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="task_to_redo">Forward task to redo?</string>
    <string name="quitWOsave">Exit without save?</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_task">Add Task</string>
    <string name="undo" >Undo</string>
    <string name="addNameToSave">Can\'t save without a name</string>
    <string name="ok">Ok</string>
</resources>
