<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write"
    android:orientation="vertical"
    tools:context=".activities.EditTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_to_be_done"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:hint="@string/enter_task_here" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/due_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateChoiceE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/date_not_set"
                android:focusable="false"/>

            <ImageButton
                android:id="@+id/datePickerE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/write"
                android:src="@drawable/ic_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_list"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerE"
                    android:layout_width="217dp"
                    android:layout_height="40sp"
                    android:layout_weight="7" />

                <ImageButton
                    android:id="@+id/addNewlistE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/write"
                    android:src="@drawable/ic_list" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:onClick="editTask"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/fab"/>

</FrameLayout>